# H-NESSi

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pages.yml
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md  Timings_plot-checkpoint.ipynb
1d_diss_example/: CMakeLists.txt  Hubb_diss.cpp  Hubb_diss.hpp  Main.cpp  README.md
Nonint_diss_example/: CMakeLists.txt  Nonint_diss_tests.cpp  Perlmutter_sub.sh  Read_Plot_G.ipynb  output.h5
Plotting/: Read_Plot_G.ipynb
Plotting/.ipynb_checkpoints/: Read_Plot_G-checkpoint.ipynb
SC_example/: .SC.cpp.swp  CMakeLists.txt  README.txt  Read_Plot_G.ipynb  SC.cpp  SC_gf2.cpp  SC_gf2.hpp  input.inp  input_test.inp  phi_input.h5
docs/: Doxyfile
hodlr/: CMakeLists.txt  block.cpp  block.hpp  blocks_keldysh.cpp  blocks_keldysh.hpp  dlr.cpp  dyson.cpp  dyson_free.cpp  dyson_free.hpp  dyson_it_integrals.cpp  dyson_it_integrals.hpp  dyson_mat.cpp  dyson_start.cpp  dyson_timestep.cpp  function.cpp  function.hpp  herm_matrix_hodlr.cpp  herm_matrix_hodlr.hpp  herm_matrix_hodlr_distance.cpp  herm_matrix_hodlr_distance.hpp  herm_matrix_hodlr_getit.cpp  herm_matrix_hodlr_getit.hpp  herm_matrix_hodlr_getreal.cpp  herm_matrix_hodlr_ptrmap.cpp  herm_matrix_hodlr_set.cpp  herm_matrix_hodlr_update.cpp  herm_matrix_hodlr_update.hpp  herm_matrix_hodlr_write.cpp  herm_matrix_hodlr_write.hpp  integration.cpp  integration.hpp  mpi_comm.cpp  mpi_comm.hpp  mpi_comm_utils.cpp  mpi_comm_utils.hpp  mpi_comm_vecload.cpp  mpi_comm_vecload.hpp  read_inputfile.cpp  utils.cpp
hodlr/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  distributed_array-checkpoint.hpp  distributed_single_timeslice-checkpoint.cpp  distributed_single_timeslice_FT-checkpoint.cpp  dyson-checkpoint.hpp  herm_matrix_hodlr-checkpoint.cpp  herm_matrix_hodlr-checkpoint.hpp  hubb_gf2_ext-checkpoint.cpp  mol_gf2-checkpoint.cpp  n2band_nsite_InterIntraHubbard_gf2-checkpoint.cpp  nband_nsite_ExtHubbard_gf2_UNFINISHED-checkpoint.cpp  nband_nsite_Hubbard_gf2-checkpoint.cpp  nband_nsite_Hubbard_gf2-checkpoint.hpp  nband_nsite_SRSU_gf2-checkpoint.cpp  nband_nsite_SRSU_gf2-checkpoint.hpp
include/h_nessi/: block.hpp  blocks_keldysh.hpp  dlr.hpp  dyson.hpp  function.hpp  herm_matrix_hodlr.hpp  mpi_comm.hpp  read_inputfile.hpp  utils.hpp
mpi_example/: .kpoint.cpp.swp  CMakeLists.txt  Hubb_2B.cpp  Hubb_2B.hpp  Main.cpp  Perlmutter_sub.sh  README.txt  Read_Plot_G.ipynb  input.inp  kpoint.cpp  kpoint.hpp  lattice.cpp  lattice.hpp  observables.cpp  observables.hpp  selfene.cpp  selfene.hpp  test_Main.cpp
mpi_example/.ipynb_checkpoints/: Main-checkpoint.cpp  kpoint-checkpoint.cpp  kpoint-checkpoint.hpp  lattice-checkpoint.cpp  lattice-checkpoint.hpp  selfene-checkpoint.cpp  selfene-checkpoint.hpp
src/: CMakeLists.txt  block.cpp  blocks_keldysh.cpp  dlr.cpp  dyson.cpp  dyson_diss.cpp  dyson_free.cpp  dyson_it_integrals.cpp  dyson_mat.cpp  dyson_start.cpp  dyson_start_diss.cpp  dyson_timestep.cpp  dyson_timestep_diss.cpp  function.cpp  herm_matrix_hodlr.cpp  herm_matrix_hodlr_distance.cpp  herm_matrix_hodlr_getit.cpp  herm_matrix_hodlr_getreal.cpp  herm_matrix_hodlr_ptrmap.cpp  herm_matrix_hodlr_set.cpp  herm_matrix_hodlr_update.cpp  herm_matrix_hodlr_write.cpp  integration.cpp  mpi_comm.cpp  mpi_comm_utils.cpp  mpi_comm_vecload.cpp  read_inputfile.cpp  utils.cpp
tests/: CMakeLists.txt  linalg.cpp  my_tests.cpp
